# ansible-azure-magic-modules

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  codecov.yml  noxfile.py  pyproject.toml  requirements-dev.txt
definitions/: _schema.yaml  ai_services.yaml  aks_cluster.yaml  aks_node_pool.yaml  api_management.yaml  app_configuration.yaml  app_service_plan.yaml  application_gateway.yaml  application_insights.yaml  automation_account.yaml  automation_runbook.yaml  availability_set.yaml  backup_policy_vm.yaml  bastion_host.yaml  batch_account.yaml  bot_service.yaml  cdn_endpoint.yaml  cdn_profile.yaml  cognitive_account.yaml  communication_service.yaml  container_app.yaml  container_app_environment.yaml  container_instance.yaml  container_registry.yaml  cosmosdb_account.yaml  cosmosdb_sql_database.yaml  data_factory.yaml  data_lake_store.yaml  databricks_workspace.yaml  ddos_protection_plan.yaml  defender_plan.yaml  deployment.yaml  devtest_lab.yaml  diagnostic_setting.yaml  digital_twins.yaml  disk_encryption_set.yaml  dns_zone.yaml  event_grid_domain.yaml  event_grid_system_topic.yaml  event_grid_topic.yaml  (+85 more)
generator/: __init__.py  __main__.py  cli.py  parser.py  renderer.py  utils.py
output/: azure_rm_aiservices.py  azure_rm_aiservices_info.py  azure_rm_akscluster.py  azure_rm_akscluster_info.py  azure_rm_aksnodepool.py  azure_rm_aksnodepool_info.py  azure_rm_apimanagement.py  azure_rm_apimanagement_info.py  azure_rm_appconfiguration.py  azure_rm_appconfiguration_info.py  azure_rm_applicationgateway.py  azure_rm_applicationgateway_info.py  (+236 more)
(+7 files in other folders)
