[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "azure-magic-modules"
version = "0.1.0"
description = "Generate Ansible modules for Azure from YAML resource definitions"
requires-python = ">=3.10"
dependencies = ["jinja2>=3.1", "pyyaml>=6.0"]

[project.scripts]
azure-magic-modules = "generator.cli:main"
