[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "azure-magic-modules"
version = "0.1.0"
description = "Generate Ansible modules for Azure from YAML resource definitions"
requires-python = ">=3.12"
dependencies = ["jinja2>=3.1", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = [
    "nox>=2024.3",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ansible-core>=2.16",
    "ansible-lint>=24.2",
    "pycodestyle>=2.11",
]

[project.scripts]
azure-magic-modules = "generator.cli:main"
